--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
             <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
-
+        
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+        
             <div class="w-50">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
                         <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
-                        <!-- Projects Dropdown -->
                         <li class="px-1 nav-item dropdown" data-page="projects">
                             <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Projects
@@ -44,7 +43,7 @@
                             </div>
                         </li>
                     </ul>
-             </div>
+                </div>
             </div>
         </nav>
     </header>
